Bug 516864 - "Dim Screen for Administrator mode" effect causes auto-hidden panels to become visible when the polkit dialog appears
Summary: "Dim Screen for Administrator mode" effect causes auto-hidden panels to becom...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.6.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-28 17:45 UTC by fbm224
Modified: 2026-03-06 16:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Dialog hidden under panels (577.43 KB, image/png)
2026-02-28 17:45 UTC, fbm224
Details
issue on new user (153.98 KB, image/png)
2026-03-02 22:52 UTC, fbm224
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fbm224 2026-02-28 17:45:06 UTC
Created attachment 190213 [details]
Dialog hidden under panels

SUMMARY
Panels in auto-hide mode become visible on top of password prompt dialog.

STEPS TO REPRODUCE
1. Make some large panels set to auto hide
2. Ask discover to update something that requires the user password

OBSERVED RESULT
See attachhment

EXPECTED RESULT
Fully visible dialog promt

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.19.3-1
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Comment 1 Nate Graham 2026-03-02 22:32:07 UTC
How odd. Can you reproduce this in a new clean user account on the same computer with no customization applied except for making a new thick auto-hide panel?
Comment 2 fbm224 2026-03-02 22:52:32 UTC
Created attachment 190289 [details]
issue on new user
Comment 3 Nate Graham 2026-03-03 13:26:41 UTC
Thanks, I get it now.

This is intentional behavior; auto-hide panels cover windows while open. If they didn't do this, then it would be possible for your auto-hide panel to not be visible at all when it opened!
Comment 4 fbm224 2026-03-03 15:33:12 UTC
> This is intentional behavior; auto-hide panels cover windows while open. 

Sorry it is not:
""Visibility

    Always Visible: Keeps the panel visible at all times, even when windows are maximised.
-->  Auto Hide: Hides the panel off screen until the mouse is placed near the screen edge.  <---
    Windows can cover: This allows windows to cover the panel and if maximised, will cover the panel.
    Windows go below: This allows windows to go below the panel, even when maximised.""
https://userbase.kde.org/Plasma/Panels#Panels_in_Plasma_Desktop
Comment 5 Nate Graham 2026-03-03 15:37:24 UTC
There's nothing in there that contradicts my statement that the behavior you're seeing is intentional. Auto-hide panels cover windows when they appear. That's how they work.
Comment 6 fbm224 2026-03-03 15:52:30 UTC
(In reply to Nate Graham from comment #5)
> There's nothing in there that contradicts my statement that the behavior
> you're seeing is intentional. Auto-hide panels cover windows when they
> appear. That's how they work.

I may have not explained my self properly. Let's take it step by step please. 

   "Auto Hide: Hides the panel off screen until the mouse is placed near the screen edge."

1.- It says that UNTIL the mouse is placed near the screen edge, the panel will be hidden. 
2.- In the situation I'm experiencing the mouse never went near any screen edge to trigger the panel. 
3.- My issue is that the hide/show feature of the panel has been triggered because the password dialog was opened. 

In no moment I've complained about the behavior of the panel when triggered by the mouse position near the screen edge.
Comment 7 Nate Graham 2026-03-03 19:16:47 UTC
Ah, so the issue is not so much that the panel coversd the password dialog (which is intentional), but rather than showing the password dialog un-hides the panel?

I can reproduce that, and I know why: it's the "Dim for administrator mode effect! This effect puts a darkened overlay behind the password dialog. I guess technically it's implemented in such a manner that it triggers panel un-hide.

With the effect disabled, I can't reproduce the issue.
Comment 8 fbm224 2026-03-03 19:59:25 UTC
(In reply to Nate Graham from comment #7)
> Ah, so the issue is not so much that the panel coversd the password dialog
> (which is intentional), but rather than showing the password dialog un-hides
> the panel?
> 
> I can reproduce that, and I know why: it's the "Dim for administrator mode
> effect! This effect puts a darkened overlay behind the password dialog. I
> guess technically it's implemented in such a manner that it triggers panel
> un-hide.
> 
> With the effect disabled, I can't reproduce the issue.

Yes, that is it, thank you
Comment 9 Bug Janitor Service 2026-03-04 12:24:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8923
Comment 10 Vlad Zahorodnii 2026-03-05 10:10:23 UTC
Git commit d198d067145516c39ee93e1b726e341752702a00 by Vlad Zahorodnii.
Committed on 05/03/2026 at 09:22.
Pushed by vladz into branch 'master'.

effect: Make EffectWindow::isVisible() check hidden state

Currently, hidden windows are considered visible.

M  +1    -0    src/effect/effectwindow.cpp
M  +1    -0    src/effect/effectwindow.h
M  +2    -2    src/plugins/slidingpopups/slidingpopups.cpp

https://invent.kde.org/plasma/kwin/-/commit/d198d067145516c39ee93e1b726e341752702a00