effect: Make EffectWindow::isVisible() check hidden state

Currently, hidden windows are considered visible.

BUG: 516864